# redpandapics

./: README.md  main.py
python/: README.md
rust/: Cargo.toml
rust/src/: README.md  main.rs
rust/src/endpoints/: boop.rs  endpoints.rs  fact.rs  funny.rs  home.rs  mod.rs  random.rs  tall.rs  tired.rs
rust/src/handlers/: mod.rs  rejection_handler.rs
