[package]
name = "redpandapics"
version = "0.1.0"
authors = ["nexinfinite <julianjones663@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_derive = "1.0.123"
rand = "0.7.2"
futures = "0.3.12"
tokio-stream = "0.1.3"
handlebars = "3.5.2"
serde_json = "1.0.62"
